--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: release-apk
-          path: .
+          path: frontend/build/app/outputs/flutter-apk/app-release.apk
 
       - name: Copy APK to server
         env:
