--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,23 +25,25 @@ jobs:
         run: flutter build apk --release
         working-directory: frontend
 
+      # Upload artifact (optionnel)
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: frontend/build/app/outputs/flutter-apk/app-release.apk
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
+      # Download artifact (optionnel)
       - name: Download built APK
         uses: actions/download-artifact@v4
         with:
           name: release-apk
-          path: frontend/build/app/outputs/flutter-apk/app-release.apk
+          path: frontend/build/app/outputs/flutter-apk/
 
+      # Copy APK to server (volume Docker Nginx)
       - name: Copy APK to server
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -50,6 +51,8 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-      
-          # Copy the APK in the mounted volume (host path)
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 app-release.apk ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/app-release.apk
+
+          # Copy the APK to the mount directory of the docker
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 \
+          frontend/build/app/outputs/flutter-apk/app-release.apk \
+          ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/app-release.apk
