Enhance CI workflow for Flutter build and deployment
added more locks details

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,29 @@ jobs:
         with:
           flutter-version: '3.24.3'
 
+      # Verify Flutter environment and dependencies
+      - name: Flutter doctor
+        run: flutter doctor -v
+        working-directory: frontend
+
+      # Clean previous build (ensure no default Flutter project artifacts)
+      - name: Clean Flutter build
+        run: flutter clean
+        working-directory: frontend
+
       # Install Flutter dependencies
       - name: Install dependencies
         run: flutter pub get
         working-directory: frontend
 
-      # Build the release APK
+      # Build the release APK from your real code
       - name: Build APK
         run: flutter build apk --release
         working-directory: frontend
+
+      # Debug: list generated files to ensure APK exists
+      - name: List build outputs
+        run: ls -R frontend/build/app/outputs/flutter-apk
 
       # Upload the generated APK as an artifact
       - name: Upload artifact
@@ -48,14 +62,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Download the built APK artifact
+      # Download the APK artifact built in the previous job
       - name: Download built APK
         uses: actions/download-artifact@v4
         with:
           name: release-apk
-          path: ./apk   # save the artifact into ./apk directory
+          path: ./apk
 
-      # Debug: list files to confirm APK is available
+      # Debug: list downloaded files to confirm APK is available
       - name: List downloaded files
         run: ls -R ./apk
 
@@ -68,6 +82,16 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           
-          # Use scp to transfer the APK to the server
+          # Transfer APK to server (replace with your path)
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ./apk/app-release.apk \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/app-release.apk
+
+      # Optional: list remote folder to verify APK arrived
+      - name: Verify remote APK
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            ls -lh ~/nginx-apk/apk/BK-Witten
