--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,33 +26,33 @@ jobs:
       # Verify Flutter environment and dependencies
       - name: Flutter doctor
         run: flutter doctor -v
-        working-directory: frontend
+        working-directory: BK-Witten-App/frontend
 
       # Clean previous build (ensure no default Flutter project artifacts)
       - name: Clean Flutter build
         run: flutter clean
-        working-directory: frontend
+        working-directory: BK-Witten-App/frontend
 
       # Install Flutter dependencies
       - name: Install dependencies
         run: flutter pub get
-        working-directory: frontend
+        working-directory: BK-Witten-App/frontend
 
       # Build the release APK from your real code
       - name: Build APK
         run: flutter build apk --release
-        working-directory: frontend
+        working-directory: BK-Witten-App/frontend
 
       # Debug: list generated files to ensure APK exists
       - name: List build outputs
-        run: ls -R frontend/build/app/outputs/flutter-apk
+        run: ls -R BK-Witten-App/frontend/build/app/outputs/flutter-apk
 
       # Upload the generated APK as an artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: release-apk
-          path: frontend/build/app/outputs/flutter-apk/app-release.apk
+          path: BK-Witten-App/frontend/build/app/outputs/flutter-apk/app-release.apk
 
   # ======================
   # 2. Deploy job
@@ -82,7 +82,7 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           
-          # Transfer APK to server (replace with your path)
+          # Transfer APK to server
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ./apk/app-release.apk \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/app-release.apk
 
