--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,41 +13,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code from the repository
+      # 1️ Checkout the code from the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Setup Flutter SDK
+      # Debug: list repository contents to see actual folder structure
+      - name: List repository
+        run: ls -R
+
+      # 2️ Setup Flutter SDK
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
 
-      # Verify Flutter environment and dependencies
+      # 3️ Verify Flutter environment
       - name: Flutter doctor
         run: flutter doctor -v
-        working-directory: BK-Witten-App/frontend
 
-      # Clean previous build (ensure no default Flutter project artifacts)
+      # 4️ Clean previous builds
       - name: Clean Flutter build
         run: flutter clean
         working-directory: BK-Witten-App/frontend
 
-      # Install Flutter dependencies
+      # 5️ Install dependencies
       - name: Install dependencies
         run: flutter pub get
         working-directory: BK-Witten-App/frontend
 
-      # Build the release APK from your real code
+      # 6️ Build the release APK from your actual code
       - name: Build APK
         run: flutter build apk --release
         working-directory: BK-Witten-App/frontend
 
-      # Debug: list generated files to ensure APK exists
+      # 7️ Debug: list generated files to ensure APK exists
       - name: List build outputs
         run: ls -R BK-Witten-App/frontend/build/app/outputs/flutter-apk
 
-      # Upload the generated APK as an artifact
+      # 8️ Upload the generated APK as an artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -62,18 +65,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Download the APK artifact built in the previous job
+      # 1️ Download the APK artifact built in the previous job
       - name: Download built APK
         uses: actions/download-artifact@v4
         with:
           name: release-apk
-          path: ./apk
+          path: ./apk  # save the artifact into ./apk directory
 
-      # Debug: list downloaded files to confirm APK is available
+      # 2️ Debug: list downloaded files to confirm APK is available
       - name: List downloaded files
         run: ls -R ./apk
 
-      # Copy APK to remote server via SCP
+      # 3️ Copy APK to remote server via SCP
       - name: Copy APK to server
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -86,7 +89,7 @@ jobs:
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ./apk/app-release.apk \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/app-release.apk
 
-      # Optional: list remote folder to verify APK arrived
+      # 4️ Optional: list remote folder to verify APK arrived
       - name: Verify remote APK
         uses: appleboy/ssh-action@v0.1.6
         with:
