--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,28 +34,29 @@ jobs:
       # 4️ Clean previous builds
       - name: Clean Flutter build
         run: flutter clean
-        working-directory: BK-Witten-App/frontend
+        working-directory: frontend
 
       # 5️ Install dependencies
       - name: Install dependencies
         run: flutter pub get
-        working-directory: BK-Witten-App/frontend
+        working-directory: frontend
 
       # 6️ Build the release APK from your actual code
       - name: Build APK
         run: flutter build apk --release
-        working-directory: BK-Witten-App/frontend
+        working-directory: frontend
 
       # 7️ Debug: list generated files to ensure APK exists
       - name: List build outputs
-        run: ls -R BK-Witten-App/frontend/build/app/outputs/flutter-apk
+        run: ls -R build/app/outputs/flutter-apk
+        working-directory: frontend
 
       # 8️ Upload the generated APK as an artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: release-apk
-          path: BK-Witten-App/frontend/build/app/outputs/flutter-apk/app-release.apk
+          path: frontend/build/app/outputs/flutter-apk/app-release.apk
 
   # ======================
   # 2. Deploy job
