--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,45 +13,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️ Checkout the code from the repository
+      # 1. Checkout the code from the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Debug: list repository contents to see actual folder structure
-      - name: List repository
-        run: ls -R
-
-      # 2️ Setup Flutter SDK
+      # 2. Setup Flutter SDK
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
 
-      # 3️ Verify Flutter environment
+      # 3. Verify Flutter environment (Crucial for debugging)
       - name: Flutter doctor
         run: flutter doctor -v
 
-      # 4️ Clean previous builds
+      # 4. Clean previous builds to avoid old artifacts
       - name: Clean Flutter build
         run: flutter clean
         working-directory: frontend
 
-      # 5️ Install dependencies
+      # 5. Install dependencies from pubspec.yaml
       - name: Install dependencies
         run: flutter pub get
         working-directory: frontend
 
-      # 6️ Build the release APK from your actual code
+      # 6. Build the release APK from your actual code
       - name: Build APK
         run: flutter build apk --release
         working-directory: frontend
 
-      # 7️ Debug: list generated files to ensure APK exists
+      # 7. Debug: List generated files to ensure APK exists and is correctly named
       - name: List build outputs
         run: ls -R build/app/outputs/flutter-apk
         working-directory: frontend
 
-      # 8️ Upload the generated APK as an artifact
+      # 8. Upload the generated APK as an artifact for the next job
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -62,22 +58,23 @@ jobs:
   # 2. Deploy job
   # ======================
   deploy:
+    # This job depends on a successful build
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      # 1️ Download the APK artifact built in the previous job
+      # 1. Download the APK artifact built in the previous job
       - name: Download built APK
         uses: actions/download-artifact@v4
         with:
           name: release-apk
-          path: ./apk  # save the artifact into ./apk directory
+          path: ./apk  # Save the artifact into ./apk directory
 
-      # 2️ Debug: list downloaded files to confirm APK is available
+      # 2. Debug: List downloaded files to confirm APK is available
       - name: List downloaded files
         run: ls -R ./apk
 
-      # 3️ Copy APK to remote server via SCP
+      # 3. Copy APK to remote server via SCP
       - name: Copy APK to server
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -86,11 +83,11 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           
-          # Transfer APK to server
+          # Transfer APK to the server
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ./apk/app-release.apk \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/app-release.apk
 
-      # 4️ Optional: list remote folder to verify APK arrived
+      # 4. Optional: List remote folder to verify APK arrived
       - name: Verify remote APK
         uses: appleboy/ssh-action@v0.1.6
         with:
