--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,31 +23,35 @@ jobs:
         with:
           flutter-version: '3.24.3'
 
-      # 3. Verify Flutter environment (Crucial for debugging)
+      # 3. Accept Android licenses
+      - name: Accept Android licenses
+        run: yes | flutter doctor --android-licenses
+
+      # 4. Verify Flutter environment (Crucial for debugging)
       - name: Flutter doctor
         run: flutter doctor -v
 
-      # 4. Clean previous builds to avoid old artifacts
+      # 5. Clean previous builds to avoid old artifacts
       - name: Clean Flutter build
         run: flutter clean
         working-directory: frontend
 
-      # 5. Install dependencies from pubspec.yaml
+      # 6. Install dependencies from pubspec.yaml
       - name: Install dependencies
         run: flutter pub get
         working-directory: frontend
 
-      # 6. Build the release APK from your actual code
+      # 7. Build the release APK from your actual code
       - name: Build APK
         run: flutter build apk --release
         working-directory: frontend
 
-      # 7. Debug: List generated files to ensure APK exists and is correctly named
+      # 8. Debug: List generated files to ensure APK exists and is correctly named
       - name: List build outputs
         run: ls -R build/app/outputs/flutter-apk
         working-directory: frontend
 
-      # 8. Upload the generated APK as an artifact for the next job
+      # 9. Upload the generated APK as an artifact for the next job
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
