--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.2
+  package_info_plus: ^8.0.0
+  url_launcher: ^6.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
