--- a/.github/workflows/web_build.yml
+++ b/.github/workflows/web_build.yml
@@ -36,7 +36,7 @@ jobs:
 
       # 6. Debug: list generated web files
       - name: List build outputs
-        run: ls -R build/web
+        run: ls -R frontend/build/web
         working-directory: frontend
 
       # 7. Copy web files to remote server
@@ -52,9 +52,9 @@ jobs:
           ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "rm -rf ~/nginx-web/BK-Witten/*"
           
-          # Upload new web build
+          # Upload new web build (note: '.' instead of '*')
           scp -r -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 \
-            frontend/build/web/* \
+            frontend/build/web/. \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-web/BK-Witten/
 
       # 8. Optional: verify remote files
