--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Extract version again
         id: version
-        working-directory: frontend
+        working-directory: ./frontend
         run: |
           VERSION=$(grep '^version:' pubspec.yaml | sed 's/version: //' | cut -d "+" -f1)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
