--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           echo "{
             \"version\": \"${{ steps.version.outputs.version }}\",
-            \"url\": \"https://${{ secrets.SSH_HOST }}/apk/BK-Witten/witten-apk-release-v${{ steps.version.outputs.version }}.apk\"
+            \"url\": \"http://${{ secrets.SSH_HOST }}:${{ secrets.DOCKER_ECHO}}/apk/BK-Witten/witten-apk-release-v${{ steps.version.outputs.version }}.apk\"
           }" > update.json
           cat update.json
   
@@ -108,7 +108,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ./apk/BK-Witten-v${{ steps.version.outputs.version }}.apk \
-            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/
+            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/apk/BK-Witten/
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 frontend/update.json \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/nginx-apk/update.json
     
