--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^1.2.2
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.0
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
