--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/images/homeImg.png
     - assets/studentPlan.json
+    - assets/images/buildPlan.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
